--- a/public/html/Main.html
+++ b/public/html/Main.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<header>
+    <h1 class="logo">Logo</h1>
+    <link rel="stylesheet" type="text/css" href="../css/Main.css" />
+    <input type="checkbox" id="nav-toggle" class="nav-toggle">
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Game</a></li>
+            <li><a href="#">Development</a></li>
+
+        </ul>
+    </nav>
+    <label for="nav-toggle" class="nav-toggle-label">
+        <span></span>
+    </label>
+</header>
+
+
+
+
+<div class="content">
+    <h2>Content would go here</h2>
+</div>
 <body>
 <h1>Hello c:</h1>
 </body>
