--- a/public/html/Development.html
+++ b/public/html/Development.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<header>
+    <h1 class="logo">Logo</h1>
+    <link rel="stylesheet" type="text/css" href="../css/Main.css" />
+    <input type="checkbox" id="nav-toggle" class="nav-toggle">
+    <nav>
+        <ul>
+            <li><a href="Main.html">Home</a></li>
+            <li><a href="Game.html">Game</a></li>
+            <li><a href="Development.html">Development</a></li>
 
+        </ul>
+    </nav>
+    <label for="nav-toggle" class="nav-toggle-label">
+        <span></span>
+    </label>
+</header>
+
+
+
+
+<div class="content">
+    <h2>This is the Development page</h2>
+    <h2>Content would go here</h2>
+</div>
+<body>
+<h1>Hello </h1>
 </body>
 </html>
