--- a/public/html/Main.html
+++ b/public/html/Main.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+<title>Game Title</title>
 <header>
-    <h1 class="logo">Logo</h1>
+    <h1 class="logo">Game Logo</h1>
     <link rel="stylesheet" type="text/css" href="../css/Main.css" />
     <input type="checkbox" id="nav-toggle" class="nav-toggle">
     <nav>
@@ -17,13 +18,22 @@
     </label>
 </header>
 
-
-
+<style>
+    h1 {text-align: center;}
+    p {text-align: center;}
+    div {text-align: center;}
+    footer {text-align: center;}
+</style>
 
 <div class="content">
-    <h2>Content would go here</h2>
+    <h2 style = "color:white">Content would go here</h2>
 </div>
 <body>
-<h1>Hello </h1>
+
 </body>
+
+<footer style = "color:white">
+    2021_COMP09090_01 Web Games Development 1 <br/><hr style="border: 1px solid rgba(255,141,254,0.8);"/> University of the West of Scotland
+</footer>
+
 </html>
