--- a/public/html/Main.html
+++ b/public/html/Main.html
@@ -4,6 +4,7 @@
 <header>
     <h1 class="logo">Game Logo</h1>
     <link rel="stylesheet" type="text/css" href="../css/Main.css" />
+    <script src="https://kit.fontawesome.com/5fb04eab6a.js" crossorigin="anonymous"></script>
     <input type="checkbox" id="nav-toggle" class="nav-toggle">
     <nav>
         <ul>
@@ -28,8 +29,10 @@
 <div class="content">
     <h2 style = "color:white">Content would go here</h2>
 </div>
-<body>
 
+<body>
+<script src="webTools.js"></script>
+<p>test</p>
 </body>
 
 <footer style = "color:white">
