--- a/public/html/Main.html
+++ b/public/html/Main.html
@@ -8,9 +8,9 @@
     <input type="checkbox" id="nav-toggle" class="nav-toggle">
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Game</a></li>
-            <li><a href="#">Development</a></li>
+            <li><a href="Main.html">Home</a></li>
+            <li><a href="Game.html">Game</a></li>
+            <li><a href="Development.html">Development</a></li>
 
         </ul>
     </nav>
@@ -27,6 +27,7 @@
 </style>
 
 <div class="content">
+    <h2 style = "color:white">Home Page</h2>
     <h2 style = "color:white">Content would go here</h2>
 </div>
 
