--- a/public/html/Game.html
+++ b/public/html/Game.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<title>Game Title</title>
+<header>
+    <h1 class="logo">Game Logo</h1>
+    <link rel="stylesheet" type="text/css" href="../css/Main.css" />
+    <script src="https://kit.fontawesome.com/5fb04eab6a.js" crossorigin="anonymous"></script>
+    <input type="checkbox" id="nav-toggle" class="nav-toggle">
+    <nav>
+        <ul>
+            <li><a href="Main.html">Home</a></li>
+            <li><a href="Game.html">Game</a></li>
+            <li><a href="Development.html">Development</a></li>
 
+        </ul>
+    </nav>
+    <label for="nav-toggle" class="nav-toggle-label">
+        <span></span>
+    </label>
+</header>
+
+<style>
+    h1 {text-align: center;}
+    p {text-align: center;}
+    div {text-align: center;}
+    footer {text-align: center;}
+</style>
+
+<div class="content">
+    <h2 style = "color:white">Game Page</h2>
+    <h2 style = "color:white">Content would go here</h2>
+</div>
+
+<body>
+<script src="webTools.js"></script>
+<p>test</p>
 </body>
+
+<footer style = "color:white">
+    2021_COMP09090_01 Web Games Development 1 <br/><hr style="border: 1px solid rgba(255,141,254,0.8);"/> University of the West of Scotland
+</footer>
+
 </html>
