Placeholder Home Menu

--- a/public/html/Development.html
+++ b/public/html/Development.html
@@ -20,25 +20,23 @@
 </header>
 
 <style>
-    h1 {text-align: center;}
+    h3 {text-align: center;}
     p {text-align: center;}
     div {text-align: center;}
     footer {text-align: center;}
 </style>
 
 <div class="content">
-    <h2 style = "color:white"></h2>
     <h2 style = "color:white">Development Page</h2>
-    <h2 style = "color:white">Content would go here</h2>
 </div>
 
 <body>
+<h3 style = "color:white">Development Content Will Be Here</h3>
 <script src="webTools.js"></script>
-<p>test</p>
 </body>
 
 <footer style = "color:white">
-    2021_COMP09090_01 Web Games Development 1 <br/><hr style="border: 1px solid rgba(255,141,254,0.8);"/> University of the West of Scotland
+    2021_COMP09090_01 Web Games Development 1 <br/><hr style="border: 1px solid rgba(255, 30, 170, .85);"/> University of the West of Scotland
 </footer>
 
 </html>
