--- a/public/html/Main.html
+++ b/public/html/Main.html
@@ -3,7 +3,7 @@
 <title>Game Title</title>
 <header>
     <h1 class="logo">Game Logo</h1>
-    <link rel="stylesheet" type="text/css" href="../css/Main.css" />
+    <link rel="stylesheet" type="text/css" href="../css/Main.css"/>
     <script src="https://kit.fontawesome.com/5fb04eab6a.js" crossorigin="anonymous"></script>
     <input type="checkbox" id="nav-toggle" class="nav-toggle">
     <nav>
@@ -20,24 +20,57 @@
 </header>
 
 <style>
-    h1 {text-align: center;}
-    p {text-align: center;}
-    div {text-align: center;}
-    footer {text-align: center;}
+    h4 {
+        text-align: center;
+    }
+
+    p {
+        text-align: center;
+    }
+
+    div {
+        text-align: center;
+    }
+
+    footer {
+        text-align: center;
+    }
 </style>
 
 <div class="content">
-    <h2 style = "color:white">Home Page</h2>
-    <h2 style = "color:white">Content would go here</h2>
+    <h2 style="color:white">Home Page</h2>
 </div>
 
 <body>
-<script src="webTools.js"></script>
-<p>test</p>
+    <h3 id ="summaryTitle" class="contentTitle">Summary of the game</h3>
+    <script src="webTools.js"></script>
+<div id="summaryContent" class="contentContent">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae elit metus. Sed porttitor pharetra lacinia.
+    Integer sit amet sollicitudin orci. Nam aliquet risus id mi pretium dignissim. Curabitur nulla elit, feugiat ut sem
+    ut, aliquet ullamcorper mi. Proin commodo sit amet nunc et commodo. Cras tortor tortor, dignissim eget nisi congue,
+    porttitor sollicitudin sapien. Sed ante nisl, tempor vel dapibus at, aliquam in sapien.
+    <br/><br/> <b>Can you kill everyone in one life?</b> <br/><br/>
+    Pellentesque in ex in est pretium iaculis. Fusce a hendrerit orci. Nam venenatis consequat viverra. Suspendisse
+    placerat arcu at eros faucibus, consectetur vestibulum metus pharetra. Nam egestas mollis massa et dictum. Quisque
+    ultricies ac massa id laoreet. In blandit dui in justo dictum volutpat.
+    <br/><br/> <b> Get in there and finish the Job!</b>
+</div>
+    <img id="placeholder" class="contentContent imageContent" src="./../content/images/placeholder.png"/>
+    </div>
+</div>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
 </body>
 
-<footer style = "color:white">
-    2021_COMP09090_01 Web Games Development 1 <br/><hr style="border: 1px solid rgba(255,141,254,0.8);"/> University of the West of Scotland
+<footer style="color:white">
+    2021_COMP09090_01 Web Games Development 1 <br/>
+    <hr style="border: 1px solid rgba(255, 30, 170, .85);"/>
+    University of the West of Scotland
 </footer>
 
 </html>
