--- a/public/html/Game.html
+++ b/public/html/Game.html
@@ -20,7 +20,7 @@
 </header>
 
 <style>
-    h1 {text-align: center;}
+    h3 {text-align: center;}
     p {text-align: center;}
     div {text-align: center;}
     footer {text-align: center;}
@@ -28,16 +28,15 @@
 
 <div class="content">
     <h2 style = "color:white">Game Page</h2>
-    <h2 style = "color:white">Content would go here</h2>
 </div>
 
 <body>
+<h3 style = "color:white">Game should be Here</h3>
 <script src="webTools.js"></script>
-<p>test</p>
 </body>
 
 <footer style = "color:white">
-    2021_COMP09090_01 Web Games Development 1 <br/><hr style="border: 1px solid rgba(255,141,254,0.8);"/> University of the West of Scotland
+    2021_COMP09090_01 Web Games Development 1 <br/><hr style="border: 1px solid rgba(255, 30, 170, .85);"/> University of the West of Scotland
 </footer>
 
 </html>
