--- a/public/html/Game.html
+++ b/public/html/Game.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< Updated upstream
-=======
 <title>Game Title</title>
-
-<script src = "js/phaser.min.js"></script>
-<script type = "text/javascript" src="js/game.js"></script>
-
->>>>>>> Stashed changes
 <header>
-    <h1 class="logo">Logo</h1>
+    <h1 class="logo">Game Logo</h1>
     <link rel="stylesheet" type="text/css" href="../css/Main.css" />
+    <script src=”js/libs/phaser.min.js”></script>
+    <script src="https://kit.fontawesome.com/5fb04eab6a.js" crossorigin="anonymous"></script>
     <input type="checkbox" id="nav-toggle" class="nav-toggle">
     <nav>
         <ul>
@@ -25,14 +20,25 @@
     </label>
 </header>
 
-
-
+<style>
+    h3 {text-align: center;}
+    p {text-align: center;}
+    div {text-align: center;}
+    footer {text-align: center;}
+</style>
 
 <div class="content">
-    <h2>This is the Game page</h2>
-    <h2>Content would go here</h2>
+    <h2 style = "color:white">Game Page</h2>
 </div>
+
 <body>
-<h1>Hello </h1>
+<script type=”text/javascript” src=”js/Game.js”></script>
+<h3 style = "color:white">Game should be Here</h3>
+<script src="webTools.js"></script>
 </body>
+
+<footer style = "color:white">
+    2021_COMP09090_01 Web Games Development 1 <br/><hr style="border: 1px solid rgba(255, 30, 170, .85);"/> University of the West of Scotland
+</footer>
+
 </html>
