--- a/public/html/Development.html
+++ b/public/html/Development.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+<title>Game Title</title>
 <header>
-    <h1 class="logo">Logo</h1>
+    <h1 class="logo">Game Logo</h1>
     <link rel="stylesheet" type="text/css" href="../css/Main.css" />
+    <script src="https://kit.fontawesome.com/5fb04eab6a.js" crossorigin="anonymous"></script>
     <input type="checkbox" id="nav-toggle" class="nav-toggle">
     <nav>
         <ul>
@@ -17,14 +19,24 @@
     </label>
 </header>
 
-
-
+<style>
+    h3 {text-align: center;}
+    p {text-align: center;}
+    div {text-align: center;}
+    footer {text-align: center;}
+</style>
 
 <div class="content">
-    <h2>This is the Development page</h2>
-    <h2>Content would go here</h2>
+    <h2 style = "color:white">Development Page</h2>
 </div>
+
 <body>
-<h1>Hello </h1>
+<h3 style = "color:white">Development Content Will Be Here</h3>
+<script src="webTools.js"></script>
 </body>
+
+<footer style = "color:white">
+    2021_COMP09090_01 Web Games Development 1 <br/><hr style="border: 1px solid rgba(255, 30, 170, .85);"/> University of the West of Scotland
+</footer>
+
 </html>
