Phaser.min.js added

--- a/public/html/Game.html
+++ b/public/html/Game.html
@@ -4,6 +4,7 @@
 <header>
     <h1 class="logo">Game Logo</h1>
     <link rel="stylesheet" type="text/css" href="../css/Main.css" />
+    <script src="../js/libs/phaser.min.js"></script>
     <script src="https://kit.fontawesome.com/5fb04eab6a.js" crossorigin="anonymous"></script>
     <input type="checkbox" id="nav-toggle" class="nav-toggle">
     <nav>
@@ -31,8 +32,9 @@
 </div>
 
 <body>
+<script type="text/javascript" src="../js/Game.js"></script>
 <h3 style = "color:white">Game should be Here</h3>
-<script src="webTools.js"></script>
+<script src="../js/webTools.js"></script>
 </body>
 
 <footer style = "color:white">
