--- a/public/html/Main.html
+++ b/public/html/Main.html
@@ -43,7 +43,7 @@
 
 <body>
     <h3 id ="summaryTitle" class="contentTitle">Summary of the game</h3>
-    <script src="webTools.js"></script>
+    <script src="../js/webTools.js"></script>
 <div id="summaryContent" class="contentContent">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae elit metus. Sed porttitor pharetra lacinia.
     Integer sit amet sollicitudin orci. Nam aliquet risus id mi pretium dignissim. Curabitur nulla elit, feugiat ut sem
