--- a/public/html/Development.html
+++ b/public/html/Development.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Game Title</title>
+<title>Night Shift</title>
 <header>
-    <h1 class="logo">Game Logo</h1>
+    <h1 class="logo">Night Shift</h1>
     <link rel="stylesheet" type="text/css" href="../css/Main.css" />
     <script src="https://kit.fontawesome.com/5fb04eab6a.js" crossorigin="anonymous"></script>
     <input type="checkbox" id="nav-toggle" class="nav-toggle">
