--- a/public/html/Game.html
+++ b/public/html/Game.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Game Title</title>
+<title>Night Shift</title>
 <header>
-    <h1 class="logo">Game Logo</h1>
+    <h1 class="logo">Night Shift</h1>
     <link rel="stylesheet" type="text/css" href="../css/Main.css" />
     <script src="../js/libs/phaser.min.js"></script>
     <script src="https://kit.fontawesome.com/5fb04eab6a.js" crossorigin="anonymous"></script>
@@ -18,6 +18,7 @@
     <label for="nav-toggle" class="nav-toggle-label">
         <span></span>
     </label>
+
 </header>
 
 <style>
