--- a/public/html/Main.html
+++ b/public/html/Main.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Game Title</title>
+<title>Night Shift</title>
 <header>
-    <h1 class="logo">Game Logo</h1>
+
+    <h1 class="logo">Night Shift</h1>
     <link rel="stylesheet" type="text/css" href="../css/Main.css"/>
     <script src="https://kit.fontawesome.com/5fb04eab6a.js" crossorigin="anonymous"></script>
     <input type="checkbox" id="nav-toggle" class="nav-toggle">
@@ -17,7 +18,10 @@
     <label for="nav-toggle" class="nav-toggle-label">
         <span></span>
     </label>
+
 </header>
+
+
 
 <style>
     h4 {
@@ -37,6 +41,7 @@
     }
 </style>
 
+
 <div class="content">
     <h2 style="color:white">Home Page</h2>
 </div>
@@ -55,9 +60,8 @@
     ultricies ac massa id laoreet. In blandit dui in justo dictum volutpat.
     <br/><br/> <b> Get in there and finish the Job!</b>
 </div>
-    <img id="placeholder" class="contentContent imageContent" src="./../content/images/placeholder.png"/>
-    </div>
-</div>
+    <img id="placeholder" class="contentContent imageContent" src="./../content/images/placeholder.png" alt="placeholder.png"/>
+
     <li></li>
     <li></li>
     <li></li>
