Tab Titles for each Page has been Implemented

--- a/public/html/Main.html
+++ b/public/html/Main.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Night Shift</title>
+<title>Night Shift - Home</title>
 <header>
 
     <h1 class="logo">Night Shift</h1>
