--- a/public/html/Development.html
+++ b/public/html/Development.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Night Shift</title>
+<title>Night Shift - Development</title>
 <header>
     <h1 class="logo">Night Shift</h1>
     <link rel="stylesheet" type="text/css" href="../css/Main.css" />
