Centered Game on Game Page
Footers only to Home and Development Pages

Page spacing for Home and Development Pages

--- a/public/html/Development.html
+++ b/public/html/Development.html
@@ -3,7 +3,7 @@
 <title>Night Shift - Development</title>
 <header>
     <h1 class="logo">Night Shift</h1>
-    <link rel="stylesheet" type="text/css" href="../css/Main.css" />
+    <link rel="stylesheet" type="text/css" href="../css/Main.css"/>
     <script src="https://kit.fontawesome.com/5fb04eab6a.js" crossorigin="anonymous"></script>
     <input type="checkbox" id="nav-toggle" class="nav-toggle">
     <nav>
@@ -20,23 +20,38 @@
 </header>
 
 <style>
-    h3 {text-align: center;}
-    p {text-align: center;}
-    div {text-align: center;}
-    footer {text-align: center;}
+    h3 {
+        text-align: center;
+    }
+
+    p {
+        text-align: center;
+    }
+
+    div {
+        text-align: center;
+    }
+
+    footer {
+        text-align: center;
+    }
 </style>
 
 <div class="content">
-    <h2 style = "color:white">Development Page</h2>
+    <h2 style="color:white">Development Page</h2>
 </div>
 
 <body>
-<h3 style = "color:white">Development Content Will Be Here</h3>
-<script src="webTools.js"></script>
+<div id="page-container">
+    <div id="content-wrap">
+        <h3 style="color:white">Development Content Will Be Here</h3>
+        <script src="webTools.js"></script>
+    </div>
+    <footer id="footer">2021_COMP09090_01 Web Games Development 1 <br/>
+        <hr style="border: 1px solid rgba(255, 30, 170, .85);"/>
+        University of the West of Scotland
+    </footer>
+</div>
 </body>
-
-<footer style = "color:white">
-    2021_COMP09090_01 Web Games Development 1 <br/><hr style="border: 1px solid rgba(255, 30, 170, .85);"/> University of the West of Scotland
-</footer>
 
 </html>
