--- a/public/html/Game.html
+++ b/public/html/Game.html
@@ -3,7 +3,7 @@
 <title>Night Shift - Game</title>
 <header>
     <h1 class="logo">Night Shift</h1>
-    <link rel="stylesheet" type="text/css" href="../css/Main.css" />
+    <link rel="stylesheet" type="text/css" href="../css/Main.css"/>
     <script src="../js/libs/phaser.min.js"></script>
     <script src="https://kit.fontawesome.com/5fb04eab6a.js" crossorigin="anonymous"></script>
     <input type="checkbox" id="nav-toggle" class="nav-toggle">
@@ -18,28 +18,37 @@
     <label for="nav-toggle" class="nav-toggle-label">
         <span></span>
     </label>
-
 </header>
 
 <style>
-    h3 {text-align: center;}
-    p {text-align: center;}
-    div {text-align: center;}
-    footer {text-align: center;}
+    h3 {
+        text-align: center;
+    }
+
+    p {
+        text-align: center;
+    }
+
+    div {
+        text-align: center;
+    }
+
+    footer {
+        text-align: center;
+    }
 </style>
 
 <div class="content">
-    <h2 style = "color:white">Game Page</h2>
+    <h2 style="color:white">Game Page</h2>
 </div>
 
+
 <body>
+<style>
+    body {
+        text-align: center;
+    }
+</style>
 <script type="text/javascript" src="../js/Game.js"></script>
-<h3 style = "color:white">Game should be Here</h3>
-<script src="../js/webTools.js"></script>
 </body>
-
-<footer style = "color:white">
-    2021_COMP09090_01 Web Games Development 1 <br/><hr style="border: 1px solid rgba(255, 30, 170, .85);"/> University of the West of Scotland
-</footer>
-
 </html>
