--- a/public/html/Main.html
+++ b/public/html/Main.html
@@ -22,7 +22,6 @@
 </header>
 
 
-
 <style>
     h4 {
         text-align: center;
@@ -47,34 +46,33 @@
 </div>
 
 <body>
-    <h3 id ="summaryTitle" class="contentTitle">Summary of the game</h3>
-    <script src="../js/webTools.js"></script>
-<div id="summaryContent" class="contentContent">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae elit metus. Sed porttitor pharetra lacinia.
-    Integer sit amet sollicitudin orci. Nam aliquet risus id mi pretium dignissim. Curabitur nulla elit, feugiat ut sem
-    ut, aliquet ullamcorper mi. Proin commodo sit amet nunc et commodo. Cras tortor tortor, dignissim eget nisi congue,
-    porttitor sollicitudin sapien. Sed ante nisl, tempor vel dapibus at, aliquam in sapien.
-    <br/><br/> <b>Can you kill everyone in one life?</b> <br/><br/>
-    Pellentesque in ex in est pretium iaculis. Fusce a hendrerit orci. Nam venenatis consequat viverra. Suspendisse
-    placerat arcu at eros faucibus, consectetur vestibulum metus pharetra. Nam egestas mollis massa et dictum. Quisque
-    ultricies ac massa id laoreet. In blandit dui in justo dictum volutpat.
-    <br/><br/> <b> Get in there and finish the Job!</b>
+<div id="page-container">
+    <div id="content-wrap">
+        <h3 id="summaryTitle" class="contentTitle">Summary of the game</h3>
+        <script src="../js/webTools.js"></script>
+        <div id="summaryContent" class="contentContent">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae elit metus. Sed porttitor pharetra
+            lacinia.
+            Integer sit amet sollicitudin orci. Nam aliquet risus id mi pretium dignissim. Curabitur nulla elit, feugiat
+            ut sem
+            ut, aliquet ullamcorper mi. Proin commodo sit amet nunc et commodo. Cras tortor tortor, dignissim eget nisi
+            congue,
+            porttitor sollicitudin sapien. Sed ante nisl, tempor vel dapibus at, aliquam in sapien.
+            <br/><br/> <b>Can you kill everyone in one life?</b> <br/><br/>
+            Pellentesque in ex in est pretium iaculis. Fusce a hendrerit orci. Nam venenatis consequat viverra.
+            Suspendisse
+            placerat arcu at eros faucibus, consectetur vestibulum metus pharetra. Nam egestas mollis massa et dictum.
+            Quisque
+            ultricies ac massa id laoreet. In blandit dui in justo dictum volutpat.
+            <br/><br/> <b> Get in there and finish the Job!</b>
+        </div>
+    </div>
+    <footer id="footer">2021_COMP09090_01 Web Games Development 1 <br/>
+        <hr style="border: 1px solid rgba(255, 30, 170, .85);"/>
+        University of the West of Scotland
+    </footer>
 </div>
-    <img id="placeholder" class="contentContent imageContent" src="./../content/images/placeholder.png" alt="placeholder.png"/>
-
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
+<img id="placeholder" class="contentContent imageContent" src="./../content/images/placeholder.png"
+     alt="placeholder.png"/>
 </body>
-
-<footer style="color:white">
-    2021_COMP09090_01 Web Games Development 1 <br/>
-    <hr style="border: 1px solid rgba(255, 30, 170, .85);"/>
-    University of the West of Scotland
-</footer>
-
 </html>
