--- a/public/html/Game.html
+++ b/public/html/Game.html
@@ -21,21 +21,10 @@
 </header>
 
 <style>
-    h3 {
-        text-align: center;
-    }
-
-    p {
-        text-align: center;
-    }
-
-    div {
-        text-align: center;
-    }
-
-    footer {
-        text-align: center;
-    }
+    h3 {text-align: center;}
+    p {text-align: center;}
+    div {text-align: center;}
+    footer {text-align: center;}
 </style>
 
 <div class="content">
@@ -44,11 +33,16 @@
 
 
 <body>
-<style>
-    body {
-        text-align: center;
-    }
-</style>
+
+<div id="my game"></div>
 <script type="text/javascript" src="../js/Game.js"></script>
+<h3 style ="color:white">Controls</h3>
+
+<footer style="footer: 1">
+    2021_COMP09090_01 Web Games Development 1 <br/>
+    <hr style="border: 1px solid rgba(255, 30, 170, .85);"/>
+    University of the West of Scotland
+</footer>
 </body>
+
 </html>
