--- a/public/html/Game.html
+++ b/public/html/Game.html
@@ -38,7 +38,7 @@
 <script type="text/javascript" src="../js/Game.js"></script>
 <h3 style ="color:white">Controls</h3>
 
-<footer style="footer: 1">
+<footer style="color:white">
     2021_COMP09090_01 Web Games Development 1 <br/>
     <hr style="border: 1px solid rgba(255, 30, 170, .85);"/>
     University of the West of Scotland
