--- a/public/html/Game.html
+++ b/public/html/Game.html
@@ -37,6 +37,21 @@
 <div id="my game"></div>
 <script type="text/javascript" src="../js/Game.js"></script>
 <h3 style ="color:white">Controls</h3>
+<div id ="gameControls">
+W - Forward
+    <p> </p>
+A - Left
+    <p></p>
+S - Back
+    <p></p>
+D - Right
+    <p></p>
+E - Special
+    <p></p>
+Left-Click - Shoot
+    <p></p>
+
+</div>
 
 <footer style="color:white">
     2021_COMP09090_01 Web Games Development 1 <br/>
