--- a/public/html/Main.html
+++ b/public/html/Main.html
@@ -65,6 +65,11 @@
             Quisque
             ultricies ac massa id laoreet. In blandit dui in justo dictum volutpat.
             <br/><br/> <b> Get in there and finish the Job!</b>
+
+            <p>
+                <button
+                        onclick="document.location='Game.html'"> PLAY</button>
+            </p>
         </div>
     </div>
     <footer id="footer">2021_COMP09090_01 Web Games Development 1 <br/>
