Button and Development page

--- a/public/html/Game.html
+++ b/public/html/Game.html
@@ -21,21 +21,13 @@
 </header>
 
 <style>
-    h3 {
-        text-align: center;
-    }
+    h3 {text-align: center;}
 
-    p {
-        text-align: center;
-    }
+    p {text-align: center;}
 
-    div {
-        text-align: center;
-    }
+    div {text-align: center;}
 
-    footer {
-        text-align: center;
-    }
+    footer {text-align: center;}
 </style>
 
 <div class="content">
@@ -47,7 +39,7 @@
 
 <div id="my game"></div>
 <script type="text/javascript" src="../js/Game.js"></script>
-<<<<<<< HEAD
+
 <h3 style ="color:white">Controls</h3>
 <div id ="gameControls">
 W - Forward
@@ -65,25 +57,9 @@ Left-Click - Shoot
 
 </div>
 
-=======
-<h3 style="color:white">Controls</h3>
-<div id="gameControls">
-    W - Forward
-    <p></p>
-    A - Left
-    <p></p>
-    S - Back
-    <p></p>
-    D - Right
-    <p></p>
-    E - Special
-    <p></p>
-    Left-Click - Shoot
-    <p></p>
 
 </div>
 
->>>>>>> c8235a493c3a953b14b07bcae2b5afe6b2de5921
 <footer style="color:white">
     2021_COMP09090_01 Web Games Development 1 <br/>
     <hr style="border: 1px solid rgba(255, 30, 170, .85);"/>
