--- a/public/html/Main.html
+++ b/public/html/Main.html
@@ -21,37 +21,14 @@
 
 </header>
 
-
 <style>
-    h4 {
-        text-align: center;
-    }
+    h4 {text-align: center;}
 
-    p {
-        text-align: center;
-    }
+    p {text-align: center;}
 
-    div {
-        text-align: center;
-    }
+    div {text-align: center;}
 
-    footer {
-        text-align: center;
-    }
-
-    .button {
-        background-color: deeppink;
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 4px 2px;
-        cursor: pointer;
-    }
-
+    footer {text-align: center;}
 </style>
 
 
@@ -79,22 +56,19 @@
             Quisque
             ultricies ac massa id laoreet. In blandit dui in justo dictum volutpat.
             <br/><br/> <b> Get in there and finish the Job!</b>
-<<<<<<< HEAD
 
             <p>
-                <button
-                        onclick="document.location='Game.html'"> PLAY</button>
+            <input type="button" class="button" onclick="document.location='Game.html'" value="Go To Game!">
             </p>
-=======
-            <br/><br/><br/><br/>
-            <input type="button" class="button" value="Go To Game!">
->>>>>>> c8235a493c3a953b14b07bcae2b5afe6b2de5921
+
         </div>
     </div>
+
     <footer id="footer">2021_COMP09090_01 Web Games Development 1 <br/>
         <hr style="border: 1px solid rgba(255, 30, 170, .85);"/>
         University of the West of Scotland
     </footer>
+
 </div>
 <img id="placeholder" class="contentContent imageContent" src="./../content/images/placeholder.png"
      alt="placeholder.png"/>
