--- a/public/html/Development.html
+++ b/public/html/Development.html
@@ -20,21 +20,13 @@
 </header>
 
 <style>
-    h3 {
-        text-align: center;
-    }
+    h3 {text-align: center;}
 
-    p {
-        text-align: center;
-    }
+    p {text-align: center;}
 
-    div {
-        text-align: center;
-    }
+    div {text-align: center;}
 
-    footer {
-        text-align: center;
-    }
+    footer {text-align: center;}
 </style>
 
 <div class="content">
@@ -44,8 +36,65 @@
 <body>
 <div id="page-container">
     <div id="content-wrap">
-        <h3 style="color:white">Development Content Will Be Here</h3>
+        <h3 style="color:white">Title</h3>
+        <img id="devPlaceholder" class="contentContent imageContent" src="./../content/images/placeholder.png"
+             alt="placeholder.png"/>
+        <p>
+            Bibendum at varius vel pharetra. Tincidunt nunc pulvinar sapien et ligula. Curabitur vitae nunc sed velit
+            dignissim sodales. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus. Quis eleifend quam adipiscing
+            vitae. Enim lobortis scelerisque fermentum dui faucibus in ornare quam viverra. Amet mattis vulputate enim
+            nulla aliquet porttitor. Dolor sit amet consectetur adipiscing elit duis tristique sollicitudin nibh. Hac
+            habitasse platea dictumst quisque. Aenean et tortor at risus viverra adipiscing at in. Tristique sollicitudin
+            nibh sit amet commodo nulla facilisi nullam vehicula. Scelerisque viverra mauris in aliquam sem fringilla.
+            Ultricies leo integer malesuada nunc vel risus commodo viverra. Massa id neque aliquam vestibulum.
+
+            Tincidunt lobortis feugiat vivamus at augue. Risus pretium quam vulputate dignissim suspendisse. Commodo
+            sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec. Turpis egestas sed tempus urna
+            et pharetra. Et netus et malesuada fames ac turpis egestas integer eget. Tristique nulla aliquet enim tortor
+            at. Tortor condimentum lacinia quis vel eros donec. Diam donec adipiscing tristique risus nec. Rhoncus dolor
+            purus non enim. Velit egestas dui id ornare arcu odio ut sem nulla. At urna condimentum mattis pellentesque
+            id nibh tortor id. Sapien et ligula ullamcorper malesuada proin libero. Vel turpis nunc eget lorem.
+            Elementum tempus egestas sed sed risus pretium quam.
+
+            Vitae semper quis lectus nulla at. Nisi est sit amet facilisis. Elit scelerisque mauris pellentesque
+            pulvinar. Consequat nisl vel pretium lectus quam id leo in. Sed adipiscing diam donec adipiscing.
+            Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. Non consectetur a erat nam
+            at lectus urna. Leo vel orci porta non pulvinar. Adipiscing elit duis tristique sollicitudin nibh sit amet
+            commodo nulla. Et molestie ac feugiat sed lectus. Etiam non quam lacus suspendisse faucibus interdum posuere.
+            Orci a scelerisque purus semper eget duis. Pellentesque sit amet porttitor eget dolor morbi. Porttitor lacus
+            luctus accumsan tortor posuere ac ut consequat. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus.
+
+        </p>
+        <h3 style="color:white">Title</h3>
+        <img id="devPlaceholder2" class="contentContent imageContent" src="./../content/images/placeholder.png"
+             alt="placeholder.png"/>
+        <p>
+            Bibendum at varius vel pharetra. Tincidunt nunc pulvinar sapien et ligula. Curabitur vitae nunc sed velit
+            dignissim sodales. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus. Quis eleifend quam adipiscing
+            vitae. Enim lobortis scelerisque fermentum dui faucibus in ornare quam viverra. Amet mattis vulputate enim
+            nulla aliquet porttitor. Dolor sit amet consectetur adipiscing elit duis tristique sollicitudin nibh. Hac
+            habitasse platea dictumst quisque. Aenean et tortor at risus viverra adipiscing at in. Tristique sollicitudin
+            nibh sit amet commodo nulla facilisi nullam vehicula. Scelerisque viverra mauris in aliquam sem fringilla.
+            Ultricies leo integer malesuada nunc vel risus commodo viverra. Massa id neque aliquam vestibulum.
+
+            Tincidunt lobortis feugiat vivamus at augue. Risus pretium quam vulputate dignissim suspendisse. Commodo
+            sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec. Turpis egestas sed tempus urna
+            et pharetra. Et netus et malesuada fames ac turpis egestas integer eget. Tristique nulla aliquet enim tortor
+            at. Tortor condimentum lacinia quis vel eros donec. Diam donec adipiscing tristique risus nec. Rhoncus dolor
+            purus non enim. Velit egestas dui id ornare arcu odio ut sem nulla. At urna condimentum mattis pellentesque
+            id nibh tortor id. Sapien et ligula ullamcorper malesuada proin libero. Vel turpis nunc eget lorem.
+            Elementum tempus egestas sed sed risus pretium quam.
+
+            Vitae semper quis lectus nulla at. Nisi est sit amet facilisis. Elit scelerisque mauris pellentesque
+            pulvinar. Consequat nisl vel pretium lectus quam id leo in. Sed adipiscing diam donec adipiscing.
+            Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. Non consectetur a erat nam
+            at lectus urna. Leo vel orci porta non pulvinar. Adipiscing elit duis tristique sollicitudin nibh sit amet
+            commodo nulla. Et molestie ac feugiat sed lectus. Etiam non quam lacus suspendisse faucibus interdum posuere.
+            Orci a scelerisque purus semper eget duis. Pellentesque sit amet porttitor eget dolor morbi. Porttitor lacus
+            luctus accumsan tortor posuere ac ut consequat. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus.
+        </p>
     </div>
+
     <footer id="footer">2021_COMP09090_01 Web Games Development 1 <br/>
         <hr style="border: 1px solid rgba(255, 30, 170, .85);"/>
         University of the West of Scotland
