--- a/public/html/Development.html
+++ b/public/html/Development.html
@@ -36,36 +36,23 @@
 <body>
 <div id="page-container">
     <div id="content-wrap">
-        <h3 style="color:white">Title</h3>
+        <h3 style="color:white">Level 1 Asset Creation</h3>
         <img id="devPlaceholder" class="contentContent imageContent" src="./../content/images/placeholder.png"
              alt="placeholder.png"/>
         <p>
-            Bibendum at varius vel pharetra. Tincidunt nunc pulvinar sapien et ligula. Curabitur vitae nunc sed velit
-            dignissim sodales. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus. Quis eleifend quam adipiscing
-            vitae. Enim lobortis scelerisque fermentum dui faucibus in ornare quam viverra. Amet mattis vulputate enim
-            nulla aliquet porttitor. Dolor sit amet consectetur adipiscing elit duis tristique sollicitudin nibh. Hac
-            habitasse platea dictumst quisque. Aenean et tortor at risus viverra adipiscing at in. Tristique sollicitudin
-            nibh sit amet commodo nulla facilisi nullam vehicula. Scelerisque viverra mauris in aliquam sem fringilla.
-            Ultricies leo integer malesuada nunc vel risus commodo viverra. Massa id neque aliquam vestibulum.
-
-            Tincidunt lobortis feugiat vivamus at augue. Risus pretium quam vulputate dignissim suspendisse. Commodo
-            sed egestas egestas fringilla phasellus faucibus scelerisque eleifend donec. Turpis egestas sed tempus urna
-            et pharetra. Et netus et malesuada fames ac turpis egestas integer eget. Tristique nulla aliquet enim tortor
-            at. Tortor condimentum lacinia quis vel eros donec. Diam donec adipiscing tristique risus nec. Rhoncus dolor
-            purus non enim. Velit egestas dui id ornare arcu odio ut sem nulla. At urna condimentum mattis pellentesque
-            id nibh tortor id. Sapien et ligula ullamcorper malesuada proin libero. Vel turpis nunc eget lorem.
-            Elementum tempus egestas sed sed risus pretium quam.
-
-            Vitae semper quis lectus nulla at. Nisi est sit amet facilisis. Elit scelerisque mauris pellentesque
-            pulvinar. Consequat nisl vel pretium lectus quam id leo in. Sed adipiscing diam donec adipiscing.
-            Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. Non consectetur a erat nam
-            at lectus urna. Leo vel orci porta non pulvinar. Adipiscing elit duis tristique sollicitudin nibh sit amet
-            commodo nulla. Et molestie ac feugiat sed lectus. Etiam non quam lacus suspendisse faucibus interdum posuere.
-            Orci a scelerisque purus semper eget duis. Pellentesque sit amet porttitor eget dolor morbi. Porttitor lacus
-            luctus accumsan tortor posuere ac ut consequat. Eleifend quam adipiscing vitae proin sagittis nisl rhoncus.
+            To begin our development of our game, we have researched assets from various games within the genre to give
+            us an idea of the type of art-style and direction we want to take our game in. 'Hotline Miami' really stood
+            out to us with both the gameplay and art-style, we are aiming to mimic this sort of look and feel within our
+            game. We have decided to create our own assets using tools such as 'Pixelorama' which allowed us to create the
+            environment tiles that we brought over to 'Tiled' and created our own tilesheet by placing them into a tilemap
+            and exporting it as an image. With our new tilesheet we began placing the tiles into the scene, ensuring they
+            are on the correct layers which allows us to implement the walls with ease. The level we have created has been
+            carefully implemented by following the the sketches we incorporated within our game design document. After creating
+            the map, we exported it as both an image and a json file. We then began creating the character sprites, using 'INSERT NAME HERE'
+            that allowed us to create the player and enemies spriesheets which shows their life and death poses.
 
         </p>
-        <h3 style="color:white">Title</h3>
+        <h3 style="color:white">Implementing Assets</h3>
         <img id="devPlaceholder2" class="contentContent imageContent" src="./../content/images/placeholder.png"
              alt="placeholder.png"/>
         <p>
