--- a/public/html/Main.html
+++ b/public/html/Main.html
@@ -42,19 +42,19 @@
         <h3 id="summaryTitle" class="contentTitle">Summary of the game</h3>
         <script src="../js/webTools.js"></script>
         <div id="summaryContent" class="contentContent">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vitae elit metus. Sed porttitor pharetra
-            lacinia.
-            Integer sit amet sollicitudin orci. Nam aliquet risus id mi pretium dignissim. Curabitur nulla elit, feugiat
-            ut sem
-            ut, aliquet ullamcorper mi. Proin commodo sit amet nunc et commodo. Cras tortor tortor, dignissim eget nisi
-            congue,
-            porttitor sollicitudin sapien. Sed ante nisl, tempor vel dapibus at, aliquam in sapien.
+            You play as a hitman, who has been hired by a mafia boss that has tasked you with tracking down and eliminating
+            the rival families who pose a threat to the mafia don's drug operation, allowing your employer to gain full control of
+            the drug market. Your mission states that you MUST eliminate all who stand in your way of eliminating the
+            head of each family, doing so puts you in good favour of your employer and you will be heavily compensated
+            for completing your mission in a swift and efficient manner.
+
             <br/><br/> <b>Can you kill everyone in one life?</b> <br/><br/>
-            Pellentesque in ex in est pretium iaculis. Fusce a hendrerit orci. Nam venenatis consequat viverra.
-            Suspendisse
-            placerat arcu at eros faucibus, consectetur vestibulum metus pharetra. Nam egestas mollis massa et dictum.
-            Quisque
-            ultricies ac massa id laoreet. In blandit dui in justo dictum volutpat.
+
+            Make every shot count as you jump into unknown environments with limited vision and ammo. Eliminate as many enemies as
+            possible, scavenge their ammo and eliminate the boss until you can escape to collect you reward. Eliminate the
+            target within the time given to collect bonus cash from your employers.
+
+
             <br/><br/> <b> Get in there and finish the Job!</b>
 
             <p>
