--- a/public/html/Development.html
+++ b/public/html/Development.html
@@ -48,8 +48,9 @@
             and exporting it as an image. With our new tilesheet we began placing the tiles into the scene, ensuring they
             are on the correct layers which allows us to implement the walls with ease. The level we have created has been
             carefully implemented by following the the sketches we incorporated within our game design document. After creating
-            the map, we exported it as both an image and a json file. We then began creating the character sprites, using 'INSERT NAME HERE'
-            that allowed us to create the player and enemies spriesheets which shows their life and death poses.
+            the map, we exported it as both an image and a json file. We then began creating the background objects and
+            character sprites, using 'Aseprite' that allowed us to create the player and enemies spritesheets which shows their
+            life and death poses, along with arcade machines and other objects to help bring some life to the environment.
 
         </p>
         <h3 style="color:white">Implementing Assets</h3>
