--- a/public/html/Development.html
+++ b/public/html/Development.html
@@ -37,24 +37,28 @@
 <div id="page-container">
     <div id="content-wrap">
         <h3 style="color:white">Level 1 Asset Creation</h3>
-        <img id="devPlaceholder" class="contentContent imageContent" src="./../content/images/placeholder.png"
+        <img id="devPlaceholder" class="contentContent imageContent" src="./../content/images/WholeMapScreenshot.png"
              alt="placeholder.png"/>
+
         <p>
+            <div id="assetContent" class="contentContent">
             To begin our development of our game, we have researched assets from various games within the genre to give
             us an idea of the type of art-style and direction we want to take our game in. 'Hotline Miami' really stood
             out to us with both the gameplay and art-style, we are aiming to mimic this sort of look and feel within our
-            game. We have decided to create our own assets using tools such as 'Pixelorama' which allowed us to create the
+            game.<br></br>
+            We have decided to create our own assets using tools such as 'Pixelorama' or 'Aseprite' which allowed us to create the
             environment tiles that we brought over to 'Tiled' and created our own tilesheet by placing them into a tilemap
             and exporting it as an image. With our new tilesheet we began placing the tiles into the scene, ensuring they
-            are on the correct layers which allows us to implement the walls with ease. The level we have created has been
-            carefully implemented by following the the sketches we incorporated within our game design document. After creating
+            are on the correct layers which allows us to implement the walls with ease.<br> </br>
+            The level we have created has been carefully implemented by following the the sketches we incorporated within our game design document. After creating
             the map, we exported it as both an image and a json file. We then began creating the background objects and
             character sprites, using 'Aseprite' that allowed us to create the player and enemies spritesheets which shows their
             life and death poses, along with arcade machines and other objects to help bring some life to the environment.
-
+    </div>
         </p>
+
         <h3 style="color:white">Implementing Assets</h3>
-        <img id="devPlaceholder2" class="contentContent imageContent" src="./../content/images/placeholder.png"
+        <img id="devPlaceholder2" class="contentContent imageContent" src="./../content/images/AllSprites.png"
              alt="placeholder.png"/>
         <p>
             Bibendum at varius vel pharetra. Tincidunt nunc pulvinar sapien et ligula. Curabitur vitae nunc sed velit
