--- a/public/html/Main.html
+++ b/public/html/Main.html
@@ -64,14 +64,17 @@
         </div>
     </div>
 
-    <footer id="footer">2021_COMP09090_01 Web Games Development 1 <br/>
-        <hr style="border: 1px solid rgba(255, 30, 170, .85);"/>
-        University of the West of Scotland
-    </footer>
-
 </div>
-<img id="placeholder" class="contentContent imageContent" src="./../content/images/placeholder.png"
-     alt="placeholder.png"/>
 
+<video  id="video" class="contentContent imageContent" width="800" controls autoplay>
+    <source src="./../content/images/Video.mp4" type="video/mp4">
+    Your browser does not support HTML video.
+</video>
+
+<footer style="color:white">
+    2021_COMP09090_01 Web Games Development 1 <br/>
+    <hr style="border: 1px solid rgba(255, 30, 170, .85);"/>
+    University of the West of Scotland
+</footer>
 </body>
 </html>
